--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,18 @@ python: 2.7
 services:
 - docker
 
+before_install:
+  - sudo add-apt-repository ppa:duggan/bats --yes
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq bats
+
 script:
 - python -m doctest build/resolve_jenkins_plugins_dependencies.py
 - docker build -t tomdesinto/jenkins-dsl-ready .
+- bats tests
 
 after_success:
+# notify Docker Hub to make a new build
 - >
   [ "$TRAVIS_BRANCH" == "master" ]
   && curl -X POST -H "Content-Type: application/json"
