--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
     - sudo apt-get update -qq
     - sudo apt-get install -qq bats jq
     # fix `docker exec`. See https://circleci.com/docs/docker#docker-exec
-    - function docker_exec { MY_CONTAINER_NAME=$1; shift; MY_COMMAND="$@"; sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' $MY_CONTAINER_NAME)" -- bash -c $MY_COMMAND }
+    - function docker_exec { MY_CONTAINER_NAME=$1; shift; MY_COMMAND="$@"; sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' $MY_CONTAINER_NAME)" -- bash -c $MY_COMMAND; }
     - sed -i 's/docker exec/docker_exec/g' tests/job-using-dind.bats
     - docker pull erikxiv/subversion:latest
     - docker pull yesops/git:latest
