--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,7 @@ dependencies:
     
 test:
   override:
+    - env
     - python -m doctest build/resolve_jenkins_plugins_dependencies.py
     - docker build -t tomdesinto/jenkins-dsl-ready .
     - bats tests
