--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
+  - sudo service docker restart ; sleep 10
 
 script:
 - python -m doctest build/resolve_jenkins_plugins_dependencies.py
