--- a/solano.yml
+++ b/solano.yml
@@ -9,7 +9,7 @@ hooks:
     sudo apt-get update -qq
     sudo apt-get install -qq bats
     sudo docker pull jenkins
-    sudo docker -t tomdesinto/jenkins-dsl-ready . 
+    sudo docker build -t tomdesinto/jenkins-dsl-ready . 
 tests:
   - python -m doctest build/resolve_jenkins_plugins_dependencies.py
   - sudo bats tests
