TESTS: tests are run upon docker image tomdesinto/jenkins-dsl-ready:bats
this ensure tests won't pull tomdesinto/jenkins-dsl-ready:latest if the build of the image tagged bats fails

--- a/circle.yml
+++ b/circle.yml
@@ -18,5 +18,5 @@ test:
   override:
     - env
     - python -m doctest build/resolve_jenkins_plugins_dependencies.py
-    - docker build -t tomdesinto/jenkins-dsl-ready .
+    - docker build -t tomdesinto/jenkins-dsl-ready:bats .
     - bats tests
