--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 
 script:
 - python -m doctest build/resolve_jenkins_plugins_dependencies.py
-- docker build -t tomdesinto/jenkins-dsl-ready .
+- docker build -t tomdesinto/jenkins-dsl-ready:bats .
 - bats tests
 
 after_success:
