--- a/solano.yml
+++ b/solano.yml
@@ -11,7 +11,7 @@ hooks:
     sudo apt-get install -qq bats
     sudo wget https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 -O /usr/local/bin/jq && sudo chmod +x /usr/local/bin/jq
     sudo docker pull jenkins
-    sudo docker build -t tomdesinto/jenkins-dsl-ready . 
+    sudo docker build -t tomdesinto/jenkins-dsl-ready:bats . 
 tests:
   - python -m doctest build/resolve_jenkins_plugins_dependencies.py
   - sudo bats tests
