--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ services:
 - docker
 
 before_install:
+  - docker version
+  - docker info
   - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
