--- a/tests/docker-cloud/Dockerfile
+++ b/tests/docker-cloud/Dockerfile
@@ -1,3 +1,4 @@
+# Docker image with all required dependencies to run bats in a Docker-in-Docker environment (dind)
 FROM docker:stable-dind
 
 RUN apk --no-cache add \
@@ -6,4 +7,3 @@ RUN apk --no-cache add \
         curl \
         jq
 
-COPY ./run-tests.sh /
