--- a/hooks/build
+++ b/hooks/build
@@ -3,7 +3,16 @@ set -eu
 
 # $IMAGE_NAME var is injected into the build so the tag is correct.
 
-echo "Build hook running"
+cat <<EOT
+
+===============================================================================
+
+BUILD
+
+===============================================================================
+
+EOT
+
 docker build \
   --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
   --build-arg VCS_REF=`git rev-parse --short HEAD` \
