--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,13 @@ services:
 before_install:
   - docker version
   - docker info
-  - sudo add-apt-repository ppa:duggan/bats --yes
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq bats
+  - pip install -r tests/requirements.txt
   - sudo service docker restart ; sleep 10
 
 script:
 - python -m doctest build/resolve_jenkins_plugins_dependencies.py
-- docker build -t tomdesinto/jenkins-dsl-ready:bats .
-- bats tests
+- docker build -t tomdesinto/jenkins-dsl-ready:test .
+- IMAGE_NAME=tomdesinto/jenkins-dsl-ready:test pytest -v
 
 after_success:
 # notify Docker Hub to make a new build
