[TESTS] fix network

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,6 +5,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile-test
+    net: host
     volumes:
       - ./:/src
     working_dir: /src
