--- a/hooks/build
+++ b/hooks/build
@@ -14,6 +14,7 @@ BUILD
 EOT
 
 docker build \
+  --pull \
   --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
   --build-arg VCS_REF=`git rev-parse --short HEAD` \
   -t $IMAGE_NAME .
