update dind test and documentation
related to https://github.com/docker-library/docker/pull/174#commitcomment-34549677

--- a/tests/test_using_dind.yml
+++ b/tests/test_using_dind.yml
@@ -3,6 +3,10 @@ services:
 
   dind:
     image: docker:stable-dind
+    environment:
+      DOCKER_DRIVER: overlay2
+      DOCKER_TLS_CERTDIR: ""
+      DOCKER_HOST: tcp://docker-daemon:2375
     privileged: true
 
   jenkins:
